--- a/frontend/apps/css/custom.css
+++ b/frontend/apps/css/custom.css
@@ -10,3 +10,49 @@ The below is required for angular-ui bootstrap to work properly
 }
 body { padding-top: 70px; }
 
+.img_fixed_size {
+    position: relative;
+    float: left;
+    width: 300px;
+    height: 225px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*! http://stackoverflow.com/questions/18192082/bootstrap-3-navbar-collapse 
+	This could be fixed with altering the less variables in bootstrap */
+@media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}
+
